--- a/01_Introduction to Python Programming/Chapter 09 - Sets.ipynb
+++ b/01_Introduction to Python Programming/Chapter 09 - Sets.ipynb
@@ -47,9 +47,149 @@
    "execution_count": null,
    "id": "6174ca44",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5}\n",
+      "<class 'set'>\n",
+      "{1, 2, 3, 4, 5}\n",
+      "<class 'set'>\n",
+      "{1, 2, 3, 4, 5}\n",
+      "{1, 2, 3, 4, 5, 6}\n",
+      "{1, 2, 3, 4, 5, 6, 7, 8}\n",
+      "{1, 2, 3, 4, 5, 6, 7, 8, 9}\n",
+      "{1, 2, 3, 4, 6, 7, 8, 9}\n",
+      "{1, 2, 3, 4, 6, 7, 8, 9}\n",
+      "{1, 2, 3, 4, 6, 7, 8, 9}\n"
+     ]
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# sets are some of list, which removes all of duplicate values\n",
+    "# list of values in set function \n",
+    "s1 = set([1,2,3,4,5])\n",
+    "print(s1)\n",
+    "print(type(s1))\n",
+    "\n",
+    "# or with curly brackets { }\n",
+    "s2 = {1,2,3,4,5,1,2,3}\n",
+    "print(s2)\n",
+    "print(type(s2))\n",
+    "\n",
+    "# !!!! to create empty set, we have to use set() function, otherwise the curly brackets create an empty dictionary !!!!!\n",
+    "\n",
+    "# we can add, update and remove values \n",
+    "s1 = {1,2,3,4,5}\n",
+    "print(s1)\n",
+    "s1.add(6)\n",
+    "print(s1)\n",
+    "\n",
+    "\n",
+    "s1.update([6,7,8])\n",
+    "print(s1)\n",
+    "\n",
+    "s2 = {7,8,9}\n",
+    "s1.update([6,7,8],s2)\n",
+    "print(s1)\n",
+    "\n",
+    "s1.remove(5)\n",
+    "print(s1)\n",
+    "\n",
+    "#remove vs. discard\n",
+    "# if i wanna  remove an non exist value in set and use remove method, i met with the key error but discard show me no error and run properly\n",
+    "#s1.remove(10) # KeyError\n",
+    "print(s1)\n",
+    "\n",
+    "s1.discard(11)\n",
+    "print(s1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f07250d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 3}\n",
+      "{3}\n",
+      "{1}\n",
+      "set()\n",
+      "{1, 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#intersection \n",
+    "s1 = {1,2,3}\n",
+    "s2 = {2,3,4}\n",
+    "s3 = {3,4,5}\n",
+    "\n",
+    "s4 = s1.intersection(s2) #gives me all values that are in s2 and also that are in s1\n",
+    "print(s4) # 2,3\n",
+    "\n",
+    "s5 = s1.intersection(s2,s3)\n",
+    "print(s5) # 3\n",
+    "\n",
+    "# difference \n",
+    "# this function makes reverse, what intersection function makes\n",
+    "\n",
+    "s6 = s1.difference(s2) # gives me the different values that are in s1 but not in s2\n",
+    "print(s6) # 1\n",
+    "\n",
+    "s7 = s2.difference(s1,s3)\n",
+    "print(s7) # empty list\n",
+    "\n",
+    "# if i want to see all of variables that are different in both sets, that are either in s1 and not in s2 or in s2 but not in s1\n",
+    "s8 = s1.symmetric_difference(s2)\n",
+    "print(s8) #1,4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b849e853",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 1, 2, 3]\n",
+      "{1, 2, 3}\n",
+      "[1, 2, 3]\n",
+      "{'April', 'Corey'}\n",
+      "{'Jenn', 'Jim'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# cast list in set, remove duplicate values\n",
+    "l1 = [1,2,3,1,2,3]\n",
+    "print(l1)\n",
+    "l2 = set(l1)\n",
+    "print(l2)\n",
+    "\n",
+    "l3 = list(set(l1))\n",
+    "print(l3)\n",
+    "\n",
+    "employees = ['Corey','Jim','Steven','April','Judy','Jenn','John','Jane']\n",
+    "gym_members = ['April','John','Corey']\n",
+    "developers = ['Judy','Corey','Steven','Jane','April']\n",
+    "\n",
+    "result = set(gym_members).intersection(developers) # the employees who has gym memberships and are developers\n",
+    "print(result) \n",
+    "\n",
+    "result = set(employees).difference(gym_members,developers) # all of the employees who are neither gym members nor developers\n",
+    "print(result)\n",
+    "\n",
+    "if 'Corey'in developers: #O(n) for list, O(1) for a set\n",
+    "    print('Found!')\n"
    ]
   },
   {
@@ -77,21 +217,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "cdb781cd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'ray@media.berkeley.edu', 'zqian@umich.edu', 'gsilver@umich.edu', 'stephen.marquard@uct.ac.za', 'rjlowe@iupui.edu', 'david.horwitz@uct.ac.za', 'gopal.ramasammycook@gmail.com', 'wagnermr@iupui.edu', 'antranig@caret.cam.ac.uk', 'cwen@iupui.edu', 'louis@media.berkeley.edu'}\n"
+     ]
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE\n",
+    "name = input('Enter a file name: ')\n",
+    "if len(name) < 1:\n",
+    "    name = 'data/mbox-short.txt'\n",
     "\n",
-    "# THIS ELEMENT SHOULD CONTAIN THE NON-REPEATING EMAIL COLLECTION. \n",
-    "emails = ...\n",
+    "emails = set()\n",
+    "fhand = open(name)\n",
+    "for line in fhand:\n",
+    "    if not (line.startswith('From ')) : continue\n",
+    "    words = line.split()\n",
+    "    email = words[1]\n",
+    "    emails.add(email)\n",
+    "\n",
     "print(emails)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "c0afa07f",
    "metadata": {},
    "outputs": [],
@@ -128,7 +284,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -142,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
