--- a/02_Data Manipulation/Part B - Numpy/Chapter 01 - List vs. Array in Python.ipynb
+++ b/02_Data Manipulation/Part B - Numpy/Chapter 01 - List vs. Array in Python.ipynb
@@ -103,20 +103,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "bceb28ee",
    "metadata": {
     "id": "6ZgU2qx7NbrG"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 11, 12, 13, 14]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#manual way of creating lists\n",
-    "A = [10, 11, 12, 13, 14]"
+    "A = [10, 11, 12, 13, 14]\n",
+    "A"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "95fd858e",
    "metadata": {
     "colab": {
@@ -137,7 +149,18 @@
     "id": "zlCgDA_C_g1a",
     "outputId": "93a0aa39-bb53-4d41-a7bc-a4094055cdf7"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#create lists using functions\n",
     "L = list(range(10))\n",
@@ -147,6 +170,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9fa36f18",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# create a list range 5 to 10 with list comprehension\n",
+    "[num for num in range(5,10)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "08880c25",
    "metadata": {
     "colab": {
@@ -167,7 +212,18 @@
     "id": "vguQnAUYWWqS",
     "outputId": "90092a76-10fb-44b0-eb77-448cf2038419"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#find the data type of a list\n",
     "type(L[0])"
@@ -206,15 +262,27 @@
     "id": "AgNxHwQGU-lS",
     "outputId": "840d8a17-366c-4d70-cc5e-51b75dbb1bb6"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['0', '1', '2', '3', '4', '5', '6', '7', '8', '9']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "#converting all numbers into string character\n",
     "L2 = [str(c) for c in L]\n",
     "L2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "482cbd48",
    "metadata": {
     "colab": {
@@ -235,7 +303,18 @@
     "id": "oeELbJdJVGYa",
     "outputId": "538139ce-1499-4360-ecce-4cdc3a86cb6b"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(L2[0])"
    ]
@@ -252,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "b8b37e18",
    "metadata": {
     "colab": {
@@ -273,7 +352,18 @@
     "id": "IJhdghjhVKZy",
     "outputId": "79e761e2-14ef-4bb3-c6fd-37efcfc71c37"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[bool, str, float, int]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "L3 = [True, \"2\", 3.0, 4]\n",
     "[type(item) for item in L3]"
@@ -673,7 +763,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -687,7 +777,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
