--- a/Projekt/project.ipynb
+++ b/Projekt/project.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "id": "f80badb8",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "id": "f7d2ea57",
    "metadata": {},
    "outputs": [
@@ -28,12 +28,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      indicator_id                               indicator_label_en\n",
-      "0  #indicator+code                                  #indicator+name\n",
-      "1           200101                     Total population (thousands)\n",
-      "2           200144          Population aged 15-24 years (thousands)\n",
-      "3           200151    Population aged 65 years or older (thousands)\n",
-      "4           200343  Population aged 14 years or younger (thousands)\n"
+      "      indicator_id                                 indicator_label_en\n",
+      "31  SP.DYN.LE00.IN            Life expectancy at birth, total (years)\n",
+      "32  SP.DYN.TFRT.IN           Fertility rate, total (births per woman)\n",
+      "33     SP.POP.GROW                       Population growth (annual %)\n",
+      "34  SP.RUR.TOTL.ZS           Rural population (% of total population)\n",
+      "35       XTGOV.IMF  General government total expenditure (current ...\n"
      ]
     },
     {
@@ -137,16 +137,16 @@
        "4        NaN        NaN  Total population (thousands)  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# For dem_data_deu.csv data file\n",
-    "data_dem_data_deu = pd.read_csv('data\\\\dem_data_deu.csv')\n",
-    "data_dem_indicators = pd.read_csv('data\\\\dem_indicatorlist_deu.csv')\n",
-    "print(data_dem_indicators.head())\n",
+    "data_dem_data_deu = pd.read_csv('data/dem_data_deu.csv')\n",
+    "data_dem_indicators = pd.read_csv('data/dem_indicatorlist_deu.csv')\n",
+    "print(data_dem_indicators.tail(5))\n",
     "data_dem_data_deu = data_dem_data_deu.merge(data_dem_indicators, on='indicator_id', how='left')\n",
     "data_dem_data_deu.head()"
    ]
@@ -463,7 +463,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -477,7 +477,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
